# kuwa_torch_sample

./: pyproject.toml  simple_ver.py  trainer_ver.py
